# svc-rm-portal

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  logs.txt  openapi.json  pyproject.toml  requirements.txt  single_test.txt  test_results.txt
app/: __init__.py  main.py
app/core/: config.py  errors.py  logging.py  pagination.py  security.py
app/db/: client.py  indexes.py
app/models/: attachment.py  catalog.py  common.py  rbac.py  release.py
app/repositories/: attachment_repo.py  catalog_repo.py  rbac_repo.py  release_repo.py
app/routers/: attachments.py  auth.py  catalog.py  health.py  rbac.py  release.py
app/services/: rbac_service.py  release_service.py
app/utils/: serial.py  time.py
scripts/: seed_demo_data.py  seed_minimal.py
tests/: conftest.py
tests/e2e/: test_auth_login_flow.py  test_health.py  test_open_routes_list.py  test_openapi.py
tests/unit/: test_attachments_post.py  test_attachments_router.py  test_attachments_router_extended.py  test_auth_router.py  test_auth_service.py  test_catalog_conflicts.py  test_catalog_router.py  test_catalog_router_extended.py  test_config.py  test_db_client.py  test_db_indexes_client.py  test_errors_and_logging.py  test_health_details.py  test_pagination.py  test_pagination_extra.py  test_rbac_repo.py  test_rbac_router.py  test_rbac_router_extended.py  test_release_router.py  test_release_router_extended.py  test_release_router_negative.py  test_release_service.py  test_repositories_attachment.py  test_repositories_catalog.py  test_security.py  (+2 more)
